Commit - criado todos os modelos e controllers

--- a/SalonbeautyWeb/Views/Home/Contact.cshtml
+++ b/SalonbeautyWeb/Views/Home/Contact.cshtml
@@ -8,7 +8,7 @@
     <li>Robson Santos</li>
     <li>Fábio Macieira</li>
     <li>Cesar Tristan</li>
-    <li>Rafel</li>
+    <li>Rafael</li>
     <li>Michel</li>
     <li>Thiago Lima</li>
 </ul>
